feat: add native audio modules and expo plugin

--- a/package.json
+++ b/package.json
@@ -95,6 +95,11 @@
   "workspaces": [
     "example"
   ],
+  "expo": {
+    "plugins": [
+      "./plugins/withDeepgramPackage"
+    ]
+  },
   "packageManager": "yarn@3.6.1",
   "jest": {
     "preset": "react-native",
