Add Expo config plugin and example config

--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
   ],
   "expo": {
     "plugins": [
-      "./plugins/withDeepgramPackage"
+      "./plugins/withDeepgram"
     ]
   },
   "packageManager": "yarn@3.6.1",
