--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-native": "0.79.2",
+    "react-native-deepgram": "link:../",
+    "expo": "~53.0.16"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
