Refactor code structure for improved readability and maintainability

--- a/example/package.json
+++ b/example/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "react": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-deepgram": "link:../",
-    "expo": "~53.0.16"
+    "react-native-deepgram": "file:../"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
