--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-deepgram",
-  "version": "0.1.15",
+  "version": "0.1.16-dev.0",
   "description": "Package to support deepgram",
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
