--- a/example/ios/DeepgramExample/Info.plist
+++ b/example/ios/DeepgramExample/Info.plist
@@ -48,5 +48,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app needs the mic to capture your voice.</string>
 </dict>
 </plist>
