--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build lib",
     "prepare": "bob build",
-    "release": "release-it --only-version"
+    "release": "release-it --only-version",
+    "build:plugin": "npx tsc --build plugin"
   },
   "keywords": [
     "react-native",
