refactor(example): improve code structure for readability & maintainability
- reorganize files and components
- simplify logic and naming
- remove dead code and tighten types

--- a/example/app.json
+++ b/example/app.json
@@ -1,5 +1,25 @@
 {
-  "name": "DeepgramExample",
-  "displayName": "DeepgramExample",
-  "plugins": ["react-native-deepgram"]
+  "expo": {
+    "name": "React Native Deepgram Example",
+    "slug": "react-native-deepgram-example",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "platforms": [
+      "ios",
+      "android"
+    ],
+    "jsEngine": "hermes",
+    "newArchEnabled": true,
+    "ios": {
+      "bundleIdentifier": "com.ahhzo.react-native-deepgram-example"
+    },
+    "plugins": [
+      [
+        "react-native-deepgram",
+        {
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone"
+        }
+      ]
+    ],
+  }
 }
