--- a/example/package.json
+++ b/example/package.json
@@ -1,35 +1,26 @@
 {
   "name": "react-native-deepgram-example",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
+  "main": "index.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "build:android": "react-native build-android --extra-params \"--no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a\"",
-    "build:ios": "react-native build-ios --mode Debug"
+    "start": "expo start --clear",
+    "ios": "expo run:ios",
+    "android": "expo run:android"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
+    "expo": "~52.0.27",
     "expo-document-picker": "^12.0.2",
-    "react": "19.0.0",
-    "react-native": "0.79.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.6",
     "react-native-deepgram": "workspace:*"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "18.0.0",
-    "@react-native-community/cli-platform-android": "18.0.0",
-    "@react-native-community/cli-platform-ios": "18.0.0",
-    "@react-native/babel-preset": "0.79.2",
-    "@react-native/metro-config": "0.79.2",
-    "@react-native/typescript-config": "0.79.2",
-    "@types/react": "^19.0.0",
-    "react-native-builder-bob": "^0.40.12",
-    "react-native-monorepo-config": "^0.1.9"
-  },
-  "engines": {
-    "node": ">=18"
+    "@babel/core": "^7.20.0",
+    "@react-native/typescript-config": "^0.81.1",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "typescript": "^5.2.2"
   }
 }
